Use overflow to prevent overlapping config summary tables
Previous approach seemed almost random with the way it used line breaks for words. Caused some weirdness for edge cases. This approach just caps the size of table cells, since only metadata can grow unbounded.

Reviewed at https://reviews.apache.org/r/65537/

--- a/ui/src/main/sass/components/_job-page.scss
+++ b/ui/src/main/sass/components/_job-page.scss
@@ -89,7 +89,8 @@
     }
 
     td {
-      word-break: break-word;
+      max-width: 250px;
+      overflow: auto;
     }
   }
 
